# fastText

./: .gitignore  CMakeLists.txt
src/: args.cc  args.h  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  matrix.cc  matrix.h  model.cc  model.h  vector.cc  vector.h
